@@ -80,26 +80,6 @@ end_import
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
 name|com
 operator|.
 name|google
@@ -137,52 +117,6 @@ operator|.
 name|classification
 operator|.
 name|InterfaceStability
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|HdfsConfiguration
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|DFSConfigKeys
-operator|.
-name|DFS_DATANODE_OOB_TIMEOUT_KEY
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|DFSConfigKeys
-operator|.
-name|DFS_DATANODE_OOB_TIMEOUT_DEFAULT
 import|;
 end_import
 
@@ -308,26 +242,6 @@ operator|.
 name|OOB_RESERVED3_VALUE
 decl_stmt|;
 comment|// the last OOB type
-DECL|field|NUM_OOB_TYPES
-specifier|final
-specifier|static
-name|int
-name|NUM_OOB_TYPES
-init|=
-name|OOB_END
-operator|-
-name|OOB_START
-operator|+
-literal|1
-decl_stmt|;
-comment|// place holder for timeout value of each OOB type
-DECL|field|OOB_TIMEOUT
-specifier|final
-specifier|static
-name|long
-index|[]
-name|OOB_TIMEOUT
-decl_stmt|;
 DECL|enum|ECN
 specifier|public
 enum|enum
@@ -599,83 +513,6 @@ argument_list|,
 name|old
 argument_list|)
 return|;
-block|}
-block|}
-static|static
-block|{
-name|OOB_TIMEOUT
-operator|=
-operator|new
-name|long
-index|[
-name|NUM_OOB_TYPES
-index|]
-expr_stmt|;
-name|HdfsConfiguration
-name|conf
-init|=
-operator|new
-name|HdfsConfiguration
-argument_list|()
-decl_stmt|;
-name|String
-index|[]
-name|ele
-init|=
-name|conf
-operator|.
-name|get
-argument_list|(
-name|DFS_DATANODE_OOB_TIMEOUT_KEY
-argument_list|,
-name|DFS_DATANODE_OOB_TIMEOUT_DEFAULT
-argument_list|)
-operator|.
-name|split
-argument_list|(
-literal|","
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|NUM_OOB_TYPES
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|OOB_TIMEOUT
-index|[
-name|i
-index|]
-operator|=
-operator|(
-name|i
-operator|<
-name|ele
-operator|.
-name|length
-operator|)
-condition|?
-name|Long
-operator|.
-name|parseLong
-argument_list|(
-name|ele
-index|[
-name|i
-index|]
-argument_list|)
-else|:
-literal|0
-expr_stmt|;
 block|}
 block|}
 comment|/** default constructor **/
@@ -1010,58 +847,6 @@ block|}
 return|return
 literal|null
 return|;
-block|}
-comment|/**    * Get the timeout to be used for transmitting the OOB type    * @return the timeout in milliseconds    */
-DECL|method|getOOBTimeout (Status status)
-specifier|public
-specifier|static
-name|long
-name|getOOBTimeout
-parameter_list|(
-name|Status
-name|status
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|int
-name|index
-init|=
-name|status
-operator|.
-name|getNumber
-argument_list|()
-operator|-
-name|OOB_START
-decl_stmt|;
-if|if
-condition|(
-name|index
-operator|>=
-literal|0
-operator|&&
-name|index
-operator|<
-name|NUM_OOB_TYPES
-condition|)
-block|{
-return|return
-name|OOB_TIMEOUT
-index|[
-name|index
-index|]
-return|;
-block|}
-comment|// Not an OOB.
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"Not an OOB status: "
-operator|+
-name|status
-argument_list|)
-throw|;
 block|}
 comment|/** Get the Restart OOB ack status */
 DECL|method|getRestartOOBStatus ()
