@@ -384,6 +384,38 @@ name|hdfs
 operator|.
 name|DFSConfigKeys
 operator|.
+name|DFS_DATANODE_OOB_TIMEOUT_DEFAULT
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_OOB_TIMEOUT_KEY
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+operator|.
 name|DFS_DATANODE_PLUGINS_KEY
 import|;
 end_import
@@ -3278,6 +3310,13 @@ name|CONGESTION_RATIO
 init|=
 literal|1.5
 decl_stmt|;
+DECL|field|oobTimeouts
+specifier|private
+name|long
+index|[]
+name|oobTimeouts
+decl_stmt|;
+comment|/** timeout value of each OOB type */
 comment|/**    * Creates a dummy DataNode for testing purpose.    */
 annotation|@
 name|VisibleForTesting
@@ -3348,6 +3387,9 @@ operator|.
 name|pipelineSupportECN
 operator|=
 literal|false
+expr_stmt|;
+name|initOOBTimeout
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * Create the DataNode given a configuration, an array of dataDirs,    * and a namenode proxy    */
@@ -3741,6 +3783,9 @@ return|;
 block|}
 block|}
 argument_list|)
+expr_stmt|;
+name|initOOBTimeout
+argument_list|()
 expr_stmt|;
 block|}
 annotation|@
@@ -15482,6 +15527,168 @@ argument_list|(
 name|id
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Get timeout value of each OOB type from configuration    */
+DECL|method|initOOBTimeout ()
+specifier|private
+name|void
+name|initOOBTimeout
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|oobStart
+init|=
+name|Status
+operator|.
+name|OOB_RESTART_VALUE
+decl_stmt|;
+comment|// the first OOB type
+specifier|final
+name|int
+name|oobEnd
+init|=
+name|Status
+operator|.
+name|OOB_RESERVED3_VALUE
+decl_stmt|;
+comment|// the last OOB type
+specifier|final
+name|int
+name|numOobTypes
+init|=
+name|oobEnd
+operator|-
+name|oobStart
+operator|+
+literal|1
+decl_stmt|;
+name|oobTimeouts
+operator|=
+operator|new
+name|long
+index|[
+name|numOobTypes
+index|]
+expr_stmt|;
+specifier|final
+name|String
+index|[]
+name|ele
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|DFS_DATANODE_OOB_TIMEOUT_KEY
+argument_list|,
+name|DFS_DATANODE_OOB_TIMEOUT_DEFAULT
+argument_list|)
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numOobTypes
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|oobTimeouts
+index|[
+name|i
+index|]
+operator|=
+operator|(
+name|i
+operator|<
+name|ele
+operator|.
+name|length
+operator|)
+condition|?
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|ele
+index|[
+name|i
+index|]
+argument_list|)
+else|:
+literal|0
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Get the timeout to be used for transmitting the OOB type    * @return the timeout in milliseconds    */
+DECL|method|getOOBTimeout (Status status)
+specifier|public
+name|long
+name|getOOBTimeout
+parameter_list|(
+name|Status
+name|status
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|status
+operator|.
+name|getNumber
+argument_list|()
+operator|<
+name|Status
+operator|.
+name|OOB_RESTART_VALUE
+operator|||
+name|status
+operator|.
+name|getNumber
+argument_list|()
+operator|>
+name|Status
+operator|.
+name|OOB_RESERVED3_VALUE
+condition|)
+block|{
+comment|// Not an OOB.
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Not an OOB status: "
+operator|+
+name|status
+argument_list|)
+throw|;
+block|}
+return|return
+name|oobTimeouts
+index|[
+name|status
+operator|.
+name|getNumber
+argument_list|()
+operator|-
+name|Status
+operator|.
+name|OOB_RESTART_VALUE
+index|]
+return|;
 block|}
 block|}
 end_class
